Séparation WE_SEM et CAS_REG

--- a/bikeshare/XGBoost.ipynb
+++ b/bikeshare/XGBoost.ipynb
@@ -2880,6 +2880,139 @@
    "source": [
     "result_final.to_csv('Résultats/XGBoost/submissionXGBoost.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test-rmse-mean</th>\n",
+       "      <th>test-rmse-std</th>\n",
+       "      <th>train-rmse-mean</th>\n",
+       "      <th>train-rmse-std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.888435</td>\n",
+       "      <td>0.059403</td>\n",
+       "      <td>0.888052</td>\n",
+       "      <td>0.022942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.854170</td>\n",
+       "      <td>0.053118</td>\n",
+       "      <td>0.851958</td>\n",
+       "      <td>0.017982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.837200</td>\n",
+       "      <td>0.046986</td>\n",
+       "      <td>0.833532</td>\n",
+       "      <td>0.015613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.829001</td>\n",
+       "      <td>0.041960</td>\n",
+       "      <td>0.824270</td>\n",
+       "      <td>0.014501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.825132</td>\n",
+       "      <td>0.038176</td>\n",
+       "      <td>0.819654</td>\n",
+       "      <td>0.013975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.823357</td>\n",
+       "      <td>0.035454</td>\n",
+       "      <td>0.817363</td>\n",
+       "      <td>0.013722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.822580</td>\n",
+       "      <td>0.033540</td>\n",
+       "      <td>0.816229</td>\n",
+       "      <td>0.013598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.822265</td>\n",
+       "      <td>0.032209</td>\n",
+       "      <td>0.815667</td>\n",
+       "      <td>0.013538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.822158</td>\n",
+       "      <td>0.031287</td>\n",
+       "      <td>0.815390</td>\n",
+       "      <td>0.013508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.822140</td>\n",
+       "      <td>0.030647</td>\n",
+       "      <td>0.815253</td>\n",
+       "      <td>0.013494</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   test-rmse-mean  test-rmse-std  train-rmse-mean  train-rmse-std\n",
+       "0        0.888435       0.059403         0.888052        0.022942\n",
+       "1        0.854170       0.053118         0.851958        0.017982\n",
+       "2        0.837200       0.046986         0.833532        0.015613\n",
+       "3        0.829001       0.041960         0.824270        0.014501\n",
+       "4        0.825132       0.038176         0.819654        0.013975\n",
+       "5        0.823357       0.035454         0.817363        0.013722\n",
+       "6        0.822580       0.033540         0.816229        0.013598\n",
+       "7        0.822265       0.032209         0.815667        0.013538\n",
+       "8        0.822158       0.031287         0.815390        0.013508\n",
+       "9        0.822140       0.030647         0.815253        0.013494"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "import xgboost as xgb\n",
+    "iris = load_iris()\n",
+    "DTrain = xgb.DMatrix(iris.data, iris.target)\n",
+    "x_parameters = {\"max_depth\":[2,4,6]}\n",
+    "xgb.cv(x_parameters, DTrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
